<resources>
    <string name="app_name">Turismo Malagapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Acerca de</string>
    <string name="desc_weather">Icono para el weather</string>
    <string name="menu_home">Home</string>
    <string name="menu_centros_comerciales">Centros Comerciales</string>
    <string name="menu_restaurantes">Restaurantes</string>
    <string name="menu_luxury">Luxury</string>
    <string name="menu_museos">Museos</string>
    <string name="menu_monumentos">Monumentos</string>
    <string name="menu_playas">Playas</string>
    <string name="menu_cultura">Cultura</string>
    <string name="menu_naturaleza">Naturaleza</string>
    <string name="menu_otros">Otros</string>
    <string name="menu_alojamientos">Alojamientos</string>
    <string name="menu_puntos_informacion">Puntos de Informacion</string>
    <string name="como_llegar">¿Como llegar?</string>
    <string name="text_home"> Ordenar:</string>
    <string name="desc_imagen">Imagen del item en cuestion</string>
    <string name="icon_description">Turista bajo el sol</string>
    <string name="prueba">prueba</string>
    <string name="llamar">llamar</string>
    <string name="realizado_por">Realizado por:</string>
    <string name="nombre_Marcos">Marcos \n Aguirre Miñarro</string>
    <string name="nombre_Dani">Daniel \n Zumaquero Mayor</string>
    <string name="nombre_Marimar">Maria del Mar \n Gemio Márquez</string>
    <string name="nombre_Jesus">Jesús J. \n Corrales Guillén</string>
    <string-array name="spinner">
        <item>Alfabeticamente</item>
        <item>Por cercania</item>
    </string-array>
    <string name="title_activity_home_map">Map</string>
</resources>
